Add chapter 9 pictures

--- a/willpower/chapter9.tex
+++ b/willpower/chapter9.tex
@@ -14,6 +14,11 @@
 
 \textbf{Калі ў~вас высокі сацыяльны статус}, вы карыстаецеся аўтарытэтам, вашае меркаваньне мае значэньне. Калі вы гаворыце, вас уважліва слухаюць і глядзяць на вас. Вашыя прапановы падтрымліваюць і прымаюць аргумэнтацыю. Вас лічаць небясьпечным і крыху пабойваюцца, вы можаце пастаяць за сябе і, у~выпадку неабходнасьці, нанесьці страты ворагам і супернікам. Вы робіце шмат карыснага і незаменныя для каманды. З камандай вы на адной хвалі, кажаце ``мы'' і разумееце пачуцьці іншых. Вы вытрымліваеце канфліктныя сытуацыі і ня схільныя імгненна саступаць. Вы адчуваеце сваё права выказваць і мець меркаваньне, даваць свае адзнакі і абараняць свае асабістыя каштоўнасьці. У вас добрая самаацэнка, вы нават здаяцеся сабе вышэйшымі і мацнейшымі, чым ёсьць насамрэч. У стрэсавай сытуацыі вы трымаеце паставу і паднятую ўгару галаву. Вам, у~прынцыпе, здаецца, што навакольныя глядзяць на вас з~захапленьнем і ўхвалай. Пасьля стрэсу вы хутка супакойваецеся і любіце мірыцца і дамаўляцца.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/1.pdf}
+\end{figure}
+
 \textbf{Калі ў~вас нізкі сацыяльны статус}, то заўважыць гэта таксама даволі проста. Калі вы гаворыце, вас ня слухаюць і на вас не глядзяць. Вашым меркаваньнем грэбуюць ці забываюць пра вас. Калі вы нешта прапануеце, гэта рэдка сустракае разуменьне і зацікаўленасьць. Іншыя ўспрымаюць вас як пухнатага і бяскрыўднага чалавека, які ня можа нашкодзіць. Вас лёгка замяніць у~калектыве, бо нічога важнага вы ня робіце. У размове вы часьцей гаворыце «я», сфакусаваныя на сваіх унутраных перажываньнях. Зь цяжкасьцю вытрымліваеце позірк, аддаеце перавагу адыходу ад канфліктных сытуацый: лягчэй падпарадкавацца, чым адстойваць свае ідэі. У канфліктнай сытуацыі вам хочацца схавацца, сьціснуцца, схіліць галаву, каб вас не заўважылі. Вы баіцеся ацэньваць, прыслухоўваецеся да думак іншых ды ідзяце ``ў іх на шворцы''. У вас нізкая самаацэнка, вы здаяцеся сабе маленькімі і слабымі, і ёсьць адчуваньне, што навакольныя глядзяць на вас з~падазрэньнем ці няўхвальна. Канфлікты надоўга выбіваюць вас з~каляіны, і вам складана аднавіцца.
 
 \textbf{У розных культурах і розных клясах} стаўленьне да павышэньня статусу прыкметна адрозьніваецца. Але шлях героя, пераадоленьне сябе і сваіх страхаў, разьвіцьцё навыкаў, дарога да лідэрства~--- гэта важная частка дыскурсу ад антычных часоў да сучаснага заходняга сьвету. Пры гэтым пазыцыя ``не высоўвацца'' і ``быць як усе'' нам таксама добра знаёмая.
@@ -73,6 +78,11 @@
 
 \emph{У кожным з~нас закладзены страх высоўвацца, і гэта не выпадкова. Бо ва ўмовах герархіі, калі ідзе жорсткая канкурэнцыя, адрозьнівацца~--- гэта значыць кінуць выклік важаку. Выклік мае на ўвазе бітву да сьмерці або выгнаньне таго, хто прайграў, са зграі, як гэта бывае ў~малпаў. У такім разе быць амэгай выгадна, бо гэта дапамагае выжыць.}
 
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/2.pdf}
+\end{figure*}
+
 \textbf{Альфы} імкнуцца актыўна ўплываць на навакольны сьвет, правакуюць канкурэнцыю ды імкнуцца да перамогі, праяўляюць актыўную агрэсіўнасьць. Для альфы характэрны прыўзьняты настрой, харызматычнасьць, паблажлівасьць, просталінейнасьць, выклік, паядынак па ясных правілах і сумленнасьць. Альфы намагаюцца максімальна пашырыць свой уплыў і нарасьціць сваю сілу. Пры гэтым альфы эгаістычныя, могуць быць асацыяльнымі і дэструктыўнымі, адмаўляюцца падпарадкоўвацца правілам, калі самі не зацікаўленыя ў~іх выкананьні. Бяруць на сябе адказнасьць, ствараюць нешта арыгінальнае і ўнікальнае, імкнуцца стаць незалежнымі ад свайго асяродзьдзя і яго ацэнак.
 
 \textbf{Амэгі} больш заклапочаныя тым, каб лепей пачувацца і рабіць уражаньне на навакольных, ім вельмі важна тое, як яны выглядаюць збоку. Пазьбягаюць канкурэнцыі і дазваляюць іншым быць актыўнымі, адмаўляюцца мяняць нешта ў~навакольным сьвеце і складзенай сыстэме правілаў. Амэгі маюць дрэнную сацыяльную інтуіцыю. Для іх характэрныя эмацыйная нестабільнасьць, трывожнасьць, нежаданьне даваць свае асабістыя ацэнакі ці прытрымлівацца вызначаных прынцыпаў. Больш схільныя да пасіўнай агрэсіі, ныцьця ці абурэньня, лічаць сябе ахвярай. Да станоўчых бакоў амэгаў можна аднесьці дысцыплінаванасьць, неканфліктнасьць, сьціпласьць і падпарадкаваньне правілам. Яны імкнуцца быць як усе, залежаць ад калектыву і прытрымліваюцца чужых правілаў. Пры гэтым пастаянна абсякаюць тых, хто спрабуе вылучыцца ці мае меркаваньне, адрознае ад меркаваньня большасьці.
@@ -118,6 +128,11 @@
 
 \emph{У пераможцаў раны гояцца хутчэй~--- гэта было вядома яшчэ ў~антычныя часы. Дасьледаваньні на малпах пацьвердзілі, што гэта сапраўды так.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.2]{willpower/ch9/3.pdf}
+\end{figure}
+
 \subsection*{Парадокс шкоды алькаголю}
 
 Бядняк~--- адэпт здаровага ладу жыцьця хварэе часьцей за пітушчага багацея-курца. Вядома, што людзі з~высокім і нізкім сацыяльна-эканамічным статусам п'юць аднолькава, але рызыка сьмерці, зьвязаная з~ужываньнем алькаголю, вышэйшая ў~нізкастатусных.
@@ -161,7 +176,7 @@
 
 \subsection*{«Візуальны статус»}
 
-У шматлікіх плямёнах паляўнічых-зьбіральнікаў правадыру важней раздаваць падарункі і ежу, каб здабыць павагу супляменьнікаў, а~не назапашваць іх для абмену ці продажу. Пошук павагі і прызнаньня~--- гэта частая рухальная сіла нашых учынкаў. Чым ніжэйшы статус, тым мацней хочацца яго ўзьняць. А вось людзі з~больш высокім статусам адчуваюць меншую неабходнасьць яго даводзіць. Так, чым ніжэйшы статус, тым мацней мужчына заклапочаны давядзеньнем мужнасьці і нават часьцей ходзіць у~спартовую залю.
+У шматлікіх плямёнах паляўнічых-зьбі\-раль\-ні\-каў правадыру важней раздаваць падарункі і ежу, каб здабыць павагу супляменьнікаў, а~не назапашваць іх для абмену ці продажу. Пошук павагі і прызнаньня~--- гэта частая рухальная сіла нашых учынкаў. Чым ніжэйшы статус, тым мацней хочацца яго ўзьняць. А вось людзі з~больш высокім статусам адчуваюць меншую неабходнасьць яго даводзіць. Так, чым ніжэйшы статус, тым мацней мужчына заклапочаны давядзеньнем мужнасьці і нават часьцей ходзіць у~спартовую залю.
 
 Нізкі статус суправаджаецца адчуваньнем безвыходнасьці і штурхае нас на пошукі лёгкіх спосабаў атрыманьня задавальненьня~--- алькаголь, наркотыкі і інш. Мы менш клапоцімся пра сябе і сваё здароўе, бо навошта жыць, калі надзеі няма?
 
@@ -275,6 +290,11 @@
 
 \emph{Людзі з~вышэйшай адукацыяй у~ЗША жывуць даўжэй за тых, хто ня мае яе, у~іх меншая рызыка дэпрэсіі, трывожных разладаў, цукроўкі 2 тыпу, бранхіяльнай астмы і сардэчна-сасудзістых захворваньняў. Кожны год дадатковага навучаньня павялічвае заробак на 6\,\% і павялічвае працягласьць жыцьця на 1 год.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/4.pdf}
+\end{figure}
+
 Больш адукаваныя людзі ў~цэлым лепш клапоцяцца аб здароўі, часьцей займаюцца прафіляктыкай і маюць менш шкодных звычак. Вучоба трэніруе мозг і можа перадухіляць ці запавольваць разьвіцьцё нэўрадэгенэратыўных захворваньняў. Людзі з~больш высокім узроўнем адукацыі лепей даюць рады эмоцыям, прымаюць больш здаровыя рашэньні, эфэктыўней плянуюць жыцьцё, маюць больш здаровыя стасункі ў~сям'і і меншы ўзровень разводаў.
 
 Апошнім часам людзі, якія маюць высокі статус, усё больш пазьбягаюць ``дэманстратыўнага спажываньня'' і купляюць усё менш рэчаў. Пачынаючы з~2007 года зьвесткі амэрыканскага дасьледаваньня спажывецкіх тратаў паказваюць, што самыя багатыя людзі краіны (1\,\% насельніцтва, які зарабляе ў~раёне 300 тысячаў даляраў на год і вышэй) сталі вытрачаць значна менш на матэрыяльныя даброты, у~той час як прадстаўнікі сярэдняга класа (якія зарабляюць прыкладна 70 тысячаў даляраў на год) выдаткоўваюць столькі ж, колькі раней, і больш за тое~--- іх выдаткі на прадметы раскошы паступова растуць.
@@ -315,6 +335,11 @@
 Мы эвалюцыйна запраграмаваныя ўспрымаць прыгожым усё, што спрыяе выжываньню, таму здароўе заўсёды прывабнае. Мы ўспрымаем прыгажосьць як гармонію целаскладу і асобы, як своеасаблівае зьзяньне абаяньня чалавека, цэласнасьць ягонага вобразу. Нам падабаюцца станоўчыя эмоцыі, якія мы адчуваем побач з~прыгожым чалавекам.
 
 \textbf{У структуры прывабнасьці} вылучаюць немадыфікоўныя чыньнікі, якія ня выправіць без апэрацыі (і ня трэба гэтага рабіць!), і мадыфікоўныя, на якія трэба і можна ўплываць. Зыходная вонкавая прывабнасьць~--- гэта 60\,\% прыгажосьці, а~40\,\% складаюць паводзінныя чыньнікі (маўленьне, пастава, міміка і інш.). Напрыклад, добрая пастава з~распраўленымі плячыма і паднятай галавой падкрэсьлівае шыю, візуальна памяншае жывот і павялічвае грудзі. А хада можа ўразіць нават на адлегласьці.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/5.pdf}
+\end{figure}
 
 \subsection*{Прыкметы прыгажосьці}
 
@@ -381,6 +406,11 @@
 
 Добрая пастава можа дапамагчы і ў~іншым. У адным з~дасьледаваньняў навукоўцы паказвалі людзям, якія адбываюць турэмнае зьняволеньне, відэа розных людзей і пыталіся, каго б зь іх яны абралі ў~якасьці ахвяры. Аказалася, што адказы злачынцаў у~большасьці выпадкаў супадаюць. Лёгкая мішэнь~--- гэта чалавек, які знаходзіцца не ў~сапраўдным моманце, гарбаціцца, мітусіцца, нязграбна ходзіць, хавае позірк, мае нясьмелыя рухі. Такі набор прыкметаў часам называюць ``пастава ахвяры''. А калі вы ходзіце ўпэўнена, маеце ганарлівую пастава, уважлівыя~--- то вы зьяўляецеся ``складанай мішэньню'', і рызыка нападу на вас меншая.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/6.pdf}
+\end{figure}
+
 \textbf{Чым радасьнейшы чалавек, тым ён прывабнейшы.} Тое, як мы выглядаем і рухаемся, залежыць ад работы ніграстрыярнага шляху. Ніграстрыярны шлях~--- гэта дафамінавы шлях мозгу, які рэгулюе цяглічны тонус, цягліцы твару, каардынацыю, позы і рухальныя праявы эмоцыяў (сьмех, усьмешкі, радасьць). Пры нізкім узроўні дафаміну ваш твар скаваны, цягліцы напружаныя, рухі нязграбныя, поза згорбленая. Калі вы радасныя, то вочы зьзяюць, цела разьняволенае, твар усьцешаны і адкрыты, пастава ганарлівая. Так радасьць робіць вас прыгажэйшымі.
 
 \subsection*{``Сустракаюць па адзежцы''}
@@ -433,6 +463,11 @@
 Толькі пасьля таго, як мы падпарадкаваліся сабе, навучыліся кіраваць сваёй увагай, разьвіваючы асабістыя рэсурсы,~--- мы можам накіраваць сваю актыўнасьць у~вонкавы сьвет для павышэньня статусу. Калі ў~нас лішак сіл і энэргіі, мы хочам мяняць сьвет і актыўна выкарыстоўваць свае магчымасьці~--- так наша воля да ўлады, воля да статусу рэалізуецца ў~здаровай манэры.
 
 \textbf{Імітацыя статуту, яго дэманстрацыя, фальсіфікацыя сваіх здольнасьцяў, спроба пераймаць, а~ня быць,~--- усё гэта выйдзе вонкі ў~першым жа крызісе}. Таму лепш адразу пакіньце спробы падманваць сябе і іншых. Пачніце з~таго, што ёсьць: сьціпласьць~--- найлепшы пачатак для зьменаў. Любіце сябе доўгатэрміновага, а~не кароткатэрміновага, вытрачайце час і грошы на інвэстыцыі ў~сябе, а~не на тое, каб зрабіць уражаньне на іншых людзей, якія вам, па вялікім рахунку, абыякавыя.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/7.pdf}
+\end{figure}
 
 \subsection*{Станьце найлепшымі}
 
@@ -508,6 +543,12 @@
 
 Просты рэцэпт здароўя: самому прымаць рашэньні і купацца ў~промнях прызнаньня і ўвагі навакольных. Напрыклад, доўгажыхароў больш у~тых культурах, дзе да старых ставяцца з~пашанай і павагай, а~не здаюць іх у~дамы састарэлых. Калі вы вучыце іншых і людзі атрымліваюць ад вас важную інфармацыю, глядзяць на вас з~увагай~--- гэта павышае ваш статус. Ваша каштоўнасьць для групы~--- найлепшы паказьнік статусу. Чым больш людзей на вас глядзяць, тым вышэйшы ваш статус: нядзіўна, што дырыжоры жывуць даўжэй за ўсіх.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/8.pdf}\qquad
+  \includegraphics[scale=1.5]{willpower/ch9/9.pdf}
+\end{figure}
+
 \subsection*{Ведайце меру}
 
 Ваша жаданьне спадабацца, ваша патрэба ва ўвазе~--- гэта самы моцны паказьнік нізкага статусу. Калі вы занадта стараецеся, прыпадаеце за ўвагай~--- гэта вас абясцэньвае. Любая празьмернасьць крытычна ўспрымаецца людзьмі, таму сьціпласьць~--- найлепшы пачатак і гарантыя вашай бясьпекі, бо сьціплы чалавек нашмат устойлівейшы да маніпуляцый. Сыгналы статусу ідуць невэрбальна, вы як бы хаваеце іх, але яны бачныя. Калі хваліць сябе ўслых, усё абаяньне зьнікне~--- у~ідэале статус ``боса'' павінен выяўляцца нават у~руху яго броваў. Вялікія справы робяцца ціха: лепш кажыце пра іншых людзей і пра тое, як і чым вы можаце дапамагчы ім, чым выпінайце сябе.
@@ -519,6 +560,11 @@
 Высокі статус можа ўспрымацца іншымі людзьмі з~асьцярогай, таму харызма заключаецца ў~валоданьні высокім статусам, шчодрасьцю і тактам. Калі мы парушаем асабістыя межы, людзі могуць успрыняць нашае ўварваньне як замах на іх статус, сумнеў у~іх кампэтэнтнасьці~--- то бок як статусную пагрозу сабе. А вось наша адкрытасьць, павага асабістых межаў суразмоўцы, цікавасьць да яго, далікатнасьць і такт робяць нас бясьпечнымі ў~яго вачах.
 
 \textbf{Харызма складаецца з~трох асноўных кампанэнтаў}: увагі (прысутнасьці), цеплыні (добразычлівасьці), сілы (энэргіі). Ясная рэч, гэтыя навыкі важна разьвіць спачатку ўнутры, у~адносінах да сябе, і толькі затым выкарыстоўваць звонку. Давайце пагаворым, як праяўляецца кожны з~гэтых кампанэнтаў.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/10.pdf}
+\end{figure}
 
 \textbf{Увага}~--- найлепшы камплімэнт. Чым больш вы сфакусуецеся на суразмоўцы, тым больш харызматычныя будзеце, тым лепш зразумееце, гастрэй і эмацыйней зрэагуеце. Практыкуйце ўсьвядомленую камунікацыю: чалавек павінен ясна адчуваць, што ў~гэты момант ён для вас важнейшы за ўсё. Зьвяртайцеся да чалавека, выкарыстоўваючы словы ``вы'', ``вам'', ``ведаеце'' і да т.~п. Людзі счытваюць любое аслабленьне ўвагі да сваіх словаў і ацэньваюць вас нэгатыўна: чым мацней блукае ваш розум, тым больш адстаронена вы выглядаеце. Калі вы факусуецеся на сваіх эмоцыях і думках падчас гутаркі, то гэтае перажываньне выкідвае вас з~плыні. Давайце суразмоўцу такую ўвагу, быццам ад гэтай размовы залежыць ваша жыцьцё. Калі вы размаўляеце па тэлефоне, то заплюшчыце вочы, каб максімальна засяродзіцца на голасе. Падтрымлівайце кантакт і невэрбальна, асабліва важны для гэтага зрокавы кантакт. Разьвітваючыся, на тры сэкунды затрымайце позірк на суразмоўцы.
 
@@ -553,6 +599,11 @@
 
 Акрамя аддаленых рызык, асэнсаванасьць пазітыўна ўплывае і на самаадчуваньне, напрыклад, чым больш асэнсаванае ваша жыцьцё, тым мацней і эфэктыўней вы сьпіце. І ня варта адразу пачынаць мучыцца пытаньнямі аб паходжаньні сусьвету, зрабіце свае разважаньні больш прадметнымі. Спытайце не ``нашто'', а~``на што'' вы прыйшлі ў~гэты сьвет, а~таксама ``для чаго'' і ``для каго''. Усьвядомлена паглядзіце на свае штодзённыя дзеяньні і задайце сабе тыя ж пытаньні. Не заўсёды адказы на іх будуць прыемнымі, але гэта тое, што напэўна варта пачаць рабіць. Адваротны бок сэнсу~--- гэта дасьледаваньне сябе, пошук сваёй самаідэнтычнасьці.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/11.pdf}
+\end{figure}
+
 \textbf{Самаідэнтычнасьць}~--- гэта ваш адказ на пытаньне ``хто я?''. Цяпер пытаньне самаідэнтычнасьці і самапазнаньня вельмі актуальнае, бо крызіс сучаснага сьвету шмат у~чым~--- гэта крызіс ідэнтычнасьці. Масавая вытворчасьць прывяла да стандартызацыі мноства рэчаў, ад прадуктаў да ідэй. Разбурэньне сямейных сувязяў, псэўдадухоўнасьць, імітацыя ўражаньняў і прадметаў, разбурэньне лякальных культур~--- асабліва актыўна дэіндывідуалізацыя шчыравала ў~таталітарных рэжымах, дзе адбывалася абязьлічваньне сем'яў, гарадоў і краін, а~цяпер гэтую ролю ўзялі на сябе вэстэрнізацыя і глябалізацыя ў~горшым сэнсе гэтага слова.
 
 \infobox{Калі ў~стандартызацыі рэчаў ёсьць свае плюсы, напрыклад таннасьць, то стандартызацыя людзей таксама робіць іх ``таньнейшымі''.}
@@ -562,6 +613,11 @@
 \textbf{Фальшывая ідэнтычнасьць} фармуецца, калі чалавек вызначае сябе адно сваёй біяграфіяй, увесь час адсылаючы сябе ў~мінулае і параўноўваючы зь ім. Або калі чалавек ідэнтыфікуе сябе з~групай, якой належыць, напрыклад: мужчына, француз, мэханік, футбольны фанат,~--- пераймаючы стандарты групы як уласныя. Часам фальшывай ідэнтычнасьцю можа быць імкненьне існаваць у~поўнай аўтаноміі і жыць толькі па сваіх законах па-за грамадствам. Маркетынг навязвае нам фальшывую ідэнтычнасьць ``індывідуальнасьці'', калі мы можам купіць мноства розных прадметаў і стварыць свой асабісты набор зь іх.
 
 \textbf{Што рабіць?} У першую чаргу варта крытычна ставіцца да любой гатовай самаідэнтычнасьці. Гэта як зь ежай: усе ведаюць, чым небясьпечны фастфуд і што самая бясьпечная, карысная і смачная ежа~--- зробленая дома. Так і самаідэнтычнасьць~--- яе трэба вырошчваць і разьвіваць. Калі мы галодныя, мы часта ямо абы-што, а~калі мы ня верым і ня ведаем сябе, то гатовыя прыняць любую ідэнтычнасьць. Страта прыналежнасьці~--- гэта моцны стрэс, і мы гатовыя верыць у~што заўгодна, абы здабыць нейкую ўстойлівасьць. Таму людзі з~аслабленай самаідэнтычнасьцю, «бяспамятныя», так лёгка ўнушальныя і схільныя прапагандзе. Але як няма здаровага фастфуду, так няма і ўнівэрсальнай самаідэнтычнасьці. Яе немагчыма купіць у~краме, праца над яе стварэньнем запатрабуе ад вас значнага ўкладаньня часу і энэргіі, самае галоўнае ў~гэтым пошуку~--- працягваць шукаць.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/12.pdf}
+\end{figure}
 
 \emph{\textbf{Што вы пра сябе ведаеце?} Да якога калена вы ведаеце свой радавод? Між іншым, веданьне сваіх каранёў~--- гэта адзін з~важных аспэктаў самаідэнтычнасьці. Што вы ведаеце аб месцы, дзе жывяце? Вы ведаеце свае слабыя бакі? Як вы іх абараняеце? У чым вашыя моцныя бакі? Як вы іх карыстаеце? Што вы ўмееце рабіць? Што вы ўмееце рабіць лепш за калег? Што вам сапраўды падабаецца і чаму?}
 
@@ -582,6 +638,11 @@
 \emph{Як дакладна сказаў заснавальнік Amazon Джэф Бэзас: ``Асабісты брэнд~--- тое, што пра вас кажуць людзі, калі вас няма ў~пакоі''.}
 
 У аснове асабістага брэнда ляжаць тры ключавыя паняцьці: прафэсіяналізм, рэпутацыя і папулярнасьць. Калі чагосьці з~гэтага бракуе, то сфармаваць асабісты брэнд будзе складана. Чым бы вы ні займаліся, будзьце сумленнымі. Разьвівайцеся як прафэсіянал, заявіце пра сябе і будзьце навідавоку, пішыце артыкулы, выступайце на тэлебачаньні, давайце гострыя і актуальныя камэнтары на важныя тэмы. Пры гэтым лепш рэклямуйце сваю справу, а~не імя. Нават калі вы працуеце ў~кампаніі, памятайце, што спачатку людзі давяраюць чалавеку і толькі потым~--- фірме, так за Amazon стаіць Джэф Бэзас, за Apple~--- Стыў Джобс, за Microsoft~--- Біл Гейтс. Як вашыя звычкі, адзеньне, сацсеткі, сайт, інтэрвію адлюстроўваюць ваш асабісты брэнд? Ці ёсьць у~гэтым цэльнасьць?
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch9/13.pdf}
+\end{figure}
 
 Як мы ўжо даведаліся, сацыяльны статус шмат у~чым вынікае з~унутраных адчуваньняў, і няма сэнсу шукаць яго звонку. Мы каштоўныя тым, што ствараем карысныя для іншых людзей каштоўнасьці, што мы важныя для іншых людзей. Гатовыя адказы на пытаньні аб сэнсе жыцьця, якія прапануюць розныя вучэньні, маюць шмат пабочных эфэктаў.
 
@@ -625,3 +686,9 @@
 
 3. Ці добрыя вы ў~тым, што робіце? Ці хочаце стаць лепей?
 
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.15in}
+  \includegraphics[width=\textwidth]{willpower/ch9/full.pdf}  
+\end{figure}
