--- a/willpower.tex
+++ b/willpower.tex
@@ -16,7 +16,7 @@
 \title{Воля да жыцьця}
 \date{2020 Пераклад 2022}
 
-\includeonly{willpower/chapter8}
+% \includeonly{willpower/chapter9}
 
 \begin{document}%
 % \CoverPic{willpower/cover.png}
