Add chapter 10 pictures

--- a/willpower/chapter10.tex
+++ b/willpower/chapter10.tex
@@ -18,6 +18,11 @@
 
 \textbf{Аптымальнае сацыяльнае атачэньне~--- гэта найлепшае асяродзьдзе для росту, падтрымкі і самарэалізацыі.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/1.pdf}
+\end{figure}
+
 \subsection*{Сацыяльная ізаляцыя}
 
 Ізаляцыя згубная як для здароўя, так і для кар'еры. ``Выгнаньне з~племені лічылася больш жорсткім пакараньнем, чым кара сьмерцю'',~--- лічылася, што чалавек, ізаляваны ад грамадства, вырачаны на пакуты і гібель. Людзі~--- істоты глыбока сацыяльныя і зьвязаныя з~навакольнымі нашмат мацней, чым мы можам сабе ўявіць.
@@ -42,6 +47,11 @@
 
 Тэорыя сацыяльнага мозгу лічыць, што менавіта ўзаемадзеяньне з~суродзічамі было і ёсьць рухальнай сілай эвалюцыі. Наш «сацыяльны мозг» уключае многія аддзелы мозгу: лобныя долі, скроневыя, мігдаліну і да т.~п. Разуменьне іншых людзей~--- гэта надзвычай складаны навык, бо трэба адрозьніваць намёкі, падман, разумець інтанацыі, міміку, супастаўляць гэта з~сытуацыяй і асаблівасьцямі чалавека~--- усё гэта патрабуе інтэнсіўнага разьвіцьця мозгу.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/2.pdf}
+\end{figure}
+
 \infobox{У сярэднім чалавек можа сябраваць, то бок рэгулярна падтрымліваць адносіны, даведвацца і памятаць характарыстыкі 150 чалавек (а некаторыя «прасунутыя карыстальнікі» і больш за 200), што ўдвая больш, чым малпы.}
 
 \emph{Гэта называецца «колькасьць Данбара» і сьведчыць пра абмежаваньне колькасьці пастаянных сацыяльных сувязяў. Лік 150 увесь час прайграецца ў~чалавечай гісторыі: сярэдні памер вёскі, колькасьць людзей у~племені, памер ваеннага атрада, колькасьць актыўных сяброў у~сацсетках і г.~д.}
@@ -59,6 +69,11 @@
 Нам патрэбныя іншыя людзі, каб пераадолець сваю ізаляцыю і адзіноту. Але зьявіцца яны могуць, калі мы дапаможам ім у~гэтым. Ня трэба рабіць ідэю ``адзіноты'' рамантычнай і цудоўнай, у~ёй няма нічога карыснага, яна небясьпечная для здароўя. Пераадолейце свае перадузятасьці і чаканьні ад іншых людзей, ідзіце ім насустрач. Дапамажыце іншым пазбавіцца ад адзіноты і забабонаў у~дачыненьні да камунікацыі, гэта ўзбагаціць кожнага з~вас.
 
 \emph{У дзяцінстве я мала камунікаваў з~аднагодкамі, аддаваў перавагу ўсё рабіць і вывучаць самому. Пасьля заканчэньня мэдыцынскага ўнівэрсытэта пайшоў на спэцыялізацыю анэстэзіёляг-рэаніматоляг адно з~тае прычыны, што лекары гэтай спэцыяльнасьці менш за ўсё маюць зносіны з~пацыентамі (а таксама мне падабалася рэаніматалёгія і прыборы). Але, пачаўшы выкладаць у~мэдыцынскім унівэрсытэце, а~затым у~сваёй школе здароўя, я разьвіў навыкі зносінаў і стаў атрымліваць нашмат больш задавальненьня ад камунікацыі і новых людзей. Зрэшты, мне яшчэ вельмі далёка да «камунікатыўных геніяў».}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/3.pdf}
+\end{figure}
 
 \subsection*{Інвэстуйце ў~сувязі}
 
@@ -108,6 +123,11 @@
 \textbf{Камунікацыйны голад.} Само па сабе пачуцьцё самоты не небясьпечнае, гэта біялягічны сыгнал нашага арганізма, як смага ці голад, і задаволіць яго можна камунікацыяй. Каб выжыць, камунікуй зь іншымі~--- так кажа нам інстынкт. Голад можна задаволіць як якаснай ежай, карыснай для здароўя, так і фастфудам, які яго сьцішае, але шкодны ў~пэрспэктыве. Задаволіць пачуцьцё самоты можна і сацсеткамі ці плёткамі, але ў~пэрспэктыве злоўжываньне анляйн-камунікацыяй пагаршае сытуацыю. Можна забіць пачуцьцё адзіноты і заяданьнем, тады фармуецца заганнае кола: я самотны, таму тоўсты, і я тоўсты, таму самотны.
 
 Ясная рэч, ня варта кідацца ў~скрайнасьці і лічыць любую адзіноту шкоднай. У гэтым разьдзеле гаворка ідзе менавіта пра змушаную самоту. Дасьледаваньні паказваюць, што людзі з~больш высокім IQ менш маюць патрэбу ў~сябрах і атрымліваюць задавальненьне ад жыцьця. Па сутнасьці, быць аднаму, жыць аднаму і быць адзінокім~--- гэта розныя рэчы, якія па-рознаму ўплываюць на здароўе.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1]{willpower/ch10/4.pdf}
+\end{figure}
 
 \subsection*{Пытаньні і заданьні}
 
@@ -179,9 +199,19 @@
 
 \textbf{Слабыя сувязі}~--- гэта людзі, зь якімі мы сустракаемся, але не знаёмыя блізка: калегі, суседзі, прадаўцы, былыя аднаклясьнікі і да т.~п. Яны не зьяўляюцца нашымі сябрамі і адносяцца да іншых клястараў, і, такім парадкам, могуць даць нам доступ да новай інфармацыі, ідэй, знаёмстваў, магчымасьцяў і да таго ж прывесьці да пашырэньня нашага ўплыву. Гэтыя сувязі могуць быць значна больш разнастайнымі, плюралістычнымі, і мы можам падтрымліваць тысячы такіх «слабых» сацыяльных сувязяў.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/5.pdf}
+\end{figure}
+
 \subsection*{Як павялічыць свой сацыяльны капітал}
 
 Вядома, ня варта хадзіць і высільвацца, каб з~кім-небудзь пасябраваць, калі ўжо гэта карысна для здароўя. Аднавіць старую сувязь лягчэй, чым выбудаваць новую: складзіце сьпіс добрых знаёмых, якія выпалі з~поля ўвагі, і аднавіце гэтыя адносіны. Знаёміцца~--- гэта навык, які трэніруецца гэтак жа, як іншыя навыкі. Пра гэта напісаныя кнігі, ёсьць курсы камунікацыі і прамоўніцкага майстэрства. Калі вам замінаюць псыхалягічныя праблемы, то дапаможа псыхатэрапія. Навык прыходзіць і ўмацоўваецца толькі з~практыкай, таму трэніруйцеся ўсюды, дзе будзе дарэчы знаёміцца і ўступаць у~кантакт.
+
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/6.pdf}
+\end{figure*}
 
 \emph{``Мяне клічуць Андрэй, я пішу кнігу, яна дапаможа вам стаць здаравейшымі і прыгажэйшымі'',~--- калі вы назваліся, вам прасьцей выказвацца і заводзіць знаёмствы. У гутарцы будзьце прыязныя, дапамагайце людзям і шчыра цікаўцеся імі, тады вы будзеце ненавязьлівыя і самі атрымаеце задавальненьне і прыемны посмак. Спытайце сябе, чаму вы можаце навучыцца ў~гэтага чалавека? Вучыцеся і самі быць цікавымі і крэатыўнымі, разумець невэрбаліку і ўважліва слухаць, выбірайце ўнівэрсальныя тэмы: здароўе, праца, дзеці, агульныя знаёмыя.}
 
@@ -262,6 +292,11 @@
 
 Сацыяльнае «заражэньне» распаўсюджваецца на мноства станаў: дэпрэсія, рызыка суіцыду, атлусьценьне, алькагалізм, курэньне, шлюб, дзеці, развод, узровень прыбытку і інш. Адна лыжка дзёгцю псуе бочку мёду~--- і напраўду, мы часта капіюем дзеі іншных, спрыяючы распаўсюджваньню звычкі або ідэі па ўсіх сваіх сацыяльных сувязях. Цікава, што мы можам нават не разумець сапраўдных прычынаў сваіх паводзінаў. Нам здаецца, што гэта нашае асабістае рашэньне, але гэта адно перайманьне.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.2]{willpower/ch10/7.pdf}
+\end{figure}
+
 \emph{Калі ваш сябар пачаў курыць, то ваша рызыка закурыць павышаецца на 61\,\%, у~вашага сваяка нарадзілася дзіця~--- імавернасьць завесьці дзіця ў~вас павышаецца на 15\,\% на бліжэйшыя два гады. Мужчыны, у~якіх калега скончыў жыцьцё самагубствам, маюць у~3,5 разы вышэйшую рызыку суіцыду.}
 
 \textbf{Хваля зьменаў} рухаецца як да нас, так і ад нас. Так ці інакш, мы зьвязаныя з~400 людзьмі на ўзроўні двух поціскаў рукі, і кожны з~гэтых людзей уплывае на нас. Таму важна ня толькі што робіць ваш сябар, але й якія ў~яго сябры. Мы ўплываем на сяброў, яны на сваіх сяброў, тыя~--- на сваіх сяброў~--- так нашы ўчынкі могуць рэальна ўплываць на жыцьцё людзей, якіх мы ніколі ня бачылі. На шчасьце, добрыя звычкі гэтак жа капіююцца і распаўсюджваюцца, як і шкодныя.
@@ -341,6 +376,11 @@
 
 Паспрабуйце ў~адной эмоцыі абраць найболей пасоўны і прыгожы спосаб яе выразу: зьбярыце фота вашых усьмешак ці вашага суму і прапануйце сябрам вызначыць эмоцыю. Калі яны памыляюцца, значыць, вы недакладна выяўляеце свае эмоцыі і можаце быць няслушна зразуметыя навакольнымі. Навучыцца адчуваць нэгатыўныя эмоцыі таксама важна~--- гэта дапаможа вам быць больш стрыманымі і канструктыўней рэагаваць.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/8.pdf}
+\end{figure}
+
 \textbf{Альтруізм.} Горшае, што можна зрабіць,~--- гэта знаёміцца для таго, каб выкарыстоўваць людзей або чакаць ад іх паслуг. Такая стратэгія заўсёды пройгрышная. Камунікацыя~--- узнагарода сама па сабе. Падтрыманьне сувязяў і дапамога іншым людзям у~першую чаргу карысныя для вашага здароўя, а~ўсё астатняе~--- прыемны бонус. Сапраўдная камунікацыя~--- гэта імкненьне зрабіць іншых шчасьлівымі. Пытайце сябе «чым я магу дапамагчы гэтаму чалавеку», а~не «што я магу ад яго атрымаць?».
 
 \textbf{Агульныя інтарэсы.} Не фіксуйцеся на адрозьненьнях, знайдзіце агульнае з~вашым суразмоўцам. Прызнайце безумоўна і безумоўна значнасьць вашага суразмоўцы, усё роўна хто ён. Камунікацыя заўсёды дапамагае нам атрымліваць выдатную зваротную сувязь адносна ўсяго, што мы робім.
@@ -401,6 +441,11 @@
 Вы можаце распаўсюджваць свае межы на непадуладныя вам задачы і людзей, уключаючы іх у~сваё псыхалягічнае «цела» і затрачваючы неймаверную колькасьць энэргіі на спробы кантролю або перажываньні. Напрыклад, берацеся за задачу, рашэньне якой ад вас не залежыць, намагаецеся~--- але ў~гэтым няма сэнсу. 
 
 \textbf{Прыкмета здаровых межаў}: вы не бераце на сябе чужы груз, ня лезеце ў~чужую справу, берацеся за тое, на што можаце ўплываць. Дзейнічайце экалягічна: сумленнасьць з~сабой і навакольнымі, адмова ад эмацыйнага і фізычнага гвалту, адмова ад падману і маніпуляцый. Многія людзі лічаць, што іх пакуты, перажываньні, меркаваньні маюць каштоўнасьць для навакольных. На жаль, гэта ваша ілюзія, што навакольныя абавязаны выслухоўваць усё, што з~вас ліецца. Ня варта дзяліцца сваімі траўмамі і страхамі з~усімі навакольнымі~--- такая споведзь ахвяры нікому не цікавая. Калі вы зьвяртаецеся да іншых, то ваша прапанова павінна быць прывабнай, а~не выклікаць адрынаньне. Не рабіць і не балбатаць лішняга~--- выдатная крыніца сілаў і энэргіі. Спытайце сябе, ці будзе цікавая тая ці іншая інфармацыя вашаму суразмоўцу? Калі не разумееце, што яму цікава, то спытайце прама.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/9.pdf}
+\end{figure}
 
 \textbf{Абараняйце свае межы.} Псыхалягічныя межы падобныя межам клетак арганізма: яны прапускаюць карысныя рэчывы і блякуюць пранікненьне шкодных. Абарона асабістых межаў~--- гэта сьвядомы допуск іншых людзей да ўнутраных перажываньняў, і толькі вы вырашаеце, хто, як і калі будзе з~вамі ўзаемадзейнічаць. Важна дакладна выяўляць свае (не)жаданьні і ўмець адмаўляць, казаць ``не'' экалягічна і своечасова.
 
@@ -469,6 +514,11 @@
 
 Калі крытыка дэструктыўная, то не ўзмацняйце праблему, абараняючыся ці крытыкуючы апанента. Бо крытыкаваць вас могуць і не за справу, а~толькі спрабуючы зацьвердзіцца за ваш кошт. Вы можаце перапыніць размову, падкрэсьліць нязгоду ці сказаць, што ў~вольны час падумаеце над пачутым. А калі вам камфортней~--- можаце і праігнараваць сказанае. Калі вы сапраўды памыліліся, то прызнайце віну і выбачыцеся. Падзякуйце за заўвагу і падрабязна распытайце чалавека. Так ці інакш, вы маеце права на памылку: не памыляецца толькі той, хто нічога ня робіць. А ўменьне сумленна прызнаць свае памылкі і выправіць іх~--- гэта рыса сапраўды ўпэўненага ў~сябе чалавека.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch10/10.pdf}
+\end{figure}
+
 \infobox{Сярод людзей, зь якімі вы маеце зносіны, адзначце тых, камунікаваньне зь якімі робіць вас шчасьлівей і натхняе, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце пэўныя крокі, каб павялічыць час камунікаваньня зь першымі, а з другімі~--- максымальнае скараціць і фармалізаваць.}
 
 \textbf{Фэномэн падпарадкаваньня.} Навукоўцы лічаць, што схільнасьць да падпарадкаваньня сфармавалася ў~працэсе эвалюцыі і закладзена ў~нас генэтычна, бо выжывалі найбольш зладжаныя групы, якія падпарадкоўваюцца сваім лідэрам. Наогул падпарадкаваньне аўтарытэту, няхай гэта будзе старэйшыя па ўзросьце людзі, бацькі, прадстаўнікі ўлады ці рэлігіі, лічыцца дабрадзейнасьцю і выхоўваецца з~самага дзяцінства ў~пераважнай большасьці культур. Апроч эвалюцыйнай схільнасьці, мы праходзім велізарную школу падпарадкаваньня ў~дзіцячым садку, школе, войску. Усе гэтыя структуры, так ці інакш, прымушаюць душыць свае жаданьні і імпульсы, абясцэньваюць уласную думку і ініцыятыву. Магчыма, ніхто спэцыяльна такой мэты ня ставіць, але ў~сукупнасьці ўсе выхаваўчыя сродкі моцна душаць волю чалавека. \textbf{У выніку многія дарослыя людзі аўтаматычна падпарадкоўваюцца любому, хто ўяўляецца ім аўтарытэтам.}
@@ -535,3 +585,10 @@
 2. Ці ёсьць у~вас настаўнік, рэальны ці ўяўны?
 
 3. Хто зь людзей натхняе вас?
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0in}
+  \includegraphics[width=\textwidth]{willpower/ch10/full.pdf}  
+\end{figure}
